# Algorithms_Engineering

./: README.md
Fibonacci/: fibonacci.cc  fibonacci.h  main.cpp
Fibonacci Number/: CMakeLists.txt
Flops /: CMakeLists.txt
Flops per second/: flops.cc
Longest Common Subsequence/: CMakeLists.txt  lcs.cc  lcs.h  test.cc
Memory/: CMakeLists.txt
Memory Mountain/: mm.cc
Unit/: CMakeLists.txt
Unit Test/h_index/: h_index.hpp
Unit Testing/msw/: CMakeLists.txt
Unit Testing/palindrome/: CMakeLists.txt  tests.cc
Unit/h_index/: CMakeLists.txt  tests.cc
Unit/msw/: msw.hpp  tests.cc
Unit/palindrome/: is_palindrome.hpp
